# apartment-hunter

./: .gitignore  pyproject.toml
documentation/: regression_models.md
notebooks/: exploratory_analysis.ipynb
preprocess/: cleaning.ipynb  features_selection.ipynb
preprocess/scripts/: analyse_utils.py  cleaning_utils.py  pipeline_preprocess.py
