[tool.poetry]
name = "apartment-hunter"
version = "0.1.0"
description = ""
authors = ["''"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
mlxtend = "^0.23.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
